0825更新程式碼

--- a/pages/index.html
+++ b/pages/index.html
@@ -9,6 +9,78 @@
   <body>
     <%- include('./layout/header'); -%>
 
+    <main>
+      <section class="container">
+      <div class="mb-4 rounded-3 position-relative">
+        <picture>
+          <source media="(min-width: 992px)" srcset="../assets/images/banner.png">
+          <img src="/assets/images/banner-sm.png" alt="banner-sm" class="w-100">
+        </picture>
+        <div class="container-fluid py-5 position-absolute top-50 translate-middle-y text-white">
+          <h3 class="fs-lg-5 fs-6">獻給新世代的生活風格誌</h3>
+          <h2 class="col-md-8 fs-lg-1 fs-3">一起探索生活的無限可能</h2>
+          <button class="btn btn-secondary-200 fs-lg-5 text-white" type="button">馬上訂閱</button>
+        </div>
+      </div>
+    </section>
+
+      <section class="container py-lg-10 py-8">
+        <h2>熱門主題</h2>
+        <div class="row row-cols-lg-4 row-cols-md-2 row-cols-1 gy-5">
+          <div class="col">
+            <div class="theme-card">
+            <picture>
+              <source media="(min-width: 992px)" srcset="../assets/images/theme-1.png">
+              <img src="/assets/images/theme-1-sm.png" alt="hots-1" class="w-100">
+            </picture>
+          </div>
+             </div>
+             <div class="col">
+            <picture>
+              <source media="(min-width: 992px)" srcset="../assets/images/theme-3.png">
+              <img src="/assets/images/theme-3-sm.png" alt="hots-3" class="w-100">
+            </picture>
+          </div>
+          <div class="col">
+            <picture>
+              <source media="(min-width: 992px)" srcset="../assets/images/theme-5.png">
+              <img src="/assets/images/theme-5-sm.png" alt="hots-5" class="w-100">
+            </picture>
+          </div>
+          <div class="col">
+            <picture>
+              <source media="(min-width: 992px)" srcset="../assets/images/theme-8.png">
+              <img src="/assets/images/theme-8-sm.png" alt="hots-8" class="w-100">
+            </picture>
+          </div>
+          <div class="col">
+            <picture>
+              <source media="(min-width: 992px)" srcset="../assets/images/theme-2.png">
+              <img src="/assets/images/theme-2-sm.png" alt="hots-2" class="w-100">
+            </picture>
+          </div>
+          <div class="col">
+            <picture>
+              <source media="(min-width: 992px)" srcset="../assets/images/theme-4.png">
+              <img src="/assets/images/theme-4-sm.png" alt="hots-4" class="w-100">
+            </picture>
+          </div>
+          <div class="col">
+            <picture>
+              <source media="(min-width: 992px)" srcset="../assets/images/theme-6.png">
+              <img src="/assets/images/theme-6-sm.png" alt="hots-6" class="w-100">
+            </picture>
+          </div>
+          <div class="col">
+            <picture>
+              <source media="(min-width: 992px)" srcset="../assets/images/theme-7.png">
+              <img src="/assets/images/theme-7-sm.png" alt="hots-7" class="w-100">
+            </picture>
+          </div>
+        </div>
+      </section>
+    </main>
+
     <h1 class="index-title">我是首頁</h1>
 
     <div class="card" style="width: 18rem">
