--- a/index.html
+++ b/index.html
@@ -5,14 +5,119 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>index</title>
-    <script type="module" crossorigin src="/week6/assets/main-8fb2a326.js"></script>
-    <link rel="stylesheet" href="/week6/assets/main-e523073d.css">
+    <script type="module" crossorigin src="/week6/assets/main-6bd301eb.js"></script>
+    <link rel="stylesheet" href="/week6/assets/main-aef87cc2.css">
   </head>
   <body>
-    <h1 class="header">我是 header</h1>
-<a href="index.html">index</a>
-<a href="about.html">about</a>
-<a href="contact.html">contact</a>
+    <nav class="navbar navbar-expand-lg">
+    <div class="container">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <form class="d-flex me-auto" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+        <ul class="navbar-nav mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Dropdown
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+          </li>
+        </ul>
+        
+      </div>
+    </div>
+  </nav>
+    <main>
+      <section class="container">
+      <div class="mb-4 rounded-3 position-relative">
+        <picture>
+          <source media="(min-width: 992px)" srcset="/week6/assets/banner-ff141a3d.png ">
+          <img src="/week6/assets/banner-sm-1a33f8cf.png" alt="banner-sm" class="w-100">
+        </picture>
+        <div class="container-fluid py-5 position-absolute top-50 translate-middle-y text-white">
+          <h3 class="fs-lg-5 fs-6">獻給新世代的生活風格誌</h3>
+          <h2 class="col-md-8 fs-lg-1 fs-3">一起探索生活的無限可能</h2>
+          <button class="btn btn-secondary-200 fs-lg-5 text-white" type="button">馬上訂閱</button>
+        </div>
+      </div>
+    </section>
+
+      <section class="container py-lg-10 py-8">
+        <h2>熱門主題</h2>
+        <div class="row row-cols-lg-4 row-cols-md-2 row-cols-1 gy-5">
+          <div class="col">
+            <div class="theme-card">
+            <picture>
+              <source media="(min-width: 992px)" srcset="/week6/assets/theme-1-c3f2428d.png ">
+              <img src="/week6/assets/theme-1-sm-e28ce55e.png" alt="hots-1" class="w-100">
+            </picture>
+          </div>
+             </div>
+             <div class="col">
+            <picture>
+              <source media="(min-width: 992px)" srcset="/week6/assets/theme-3-6a361920.png ">
+              <img src="/week6/assets/theme-3-sm-03d78e75.png" alt="hots-3" class="w-100">
+            </picture>
+          </div>
+          <div class="col">
+            <picture>
+              <source media="(min-width: 992px)" srcset="/week6/assets/theme-5-b39e8856.png ">
+              <img src="/week6/assets/theme-5-sm-65d802c3.png" alt="hots-5" class="w-100">
+            </picture>
+          </div>
+          <div class="col">
+            <picture>
+              <source media="(min-width: 992px)" srcset="/week6/assets/theme-8-ce962716.png ">
+              <img src="/week6/assets/theme-8-sm-402e892b.png" alt="hots-8" class="w-100">
+            </picture>
+          </div>
+          <div class="col">
+            <picture>
+              <source media="(min-width: 992px)" srcset="/week6/assets/theme-2-f68e2e55.png ">
+              <img src="/week6/assets/theme-2-sm-2123bacc.png" alt="hots-2" class="w-100">
+            </picture>
+          </div>
+          <div class="col">
+            <picture>
+              <source media="(min-width: 992px)" srcset="/week6/assets/theme-4-3688ebf7.png ">
+              <img src="/week6/assets/theme-4-sm-0dfc8cb3.png" alt="hots-4" class="w-100">
+            </picture>
+          </div>
+          <div class="col">
+            <picture>
+              <source media="(min-width: 992px)" srcset="/week6/assets/theme-6-82f2b629.png ">
+              <img src="/week6/assets/theme-6-sm-fed41742.png" alt="hots-6" class="w-100">
+            </picture>
+          </div>
+          <div class="col">
+            <picture>
+              <source media="(min-width: 992px)" srcset="/week6/assets/theme-7-88f0cd69.png ">
+              <img src="/week6/assets/theme-7-sm-0e3e7b41.png" alt="hots-7" class="w-100">
+            </picture>
+          </div>
+        </div>
+      </section>
+    </main>
+
     <h1 class="index-title">我是首頁</h1>
 
     <div class="card" style="width: 18rem">
