--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>index</title>
-    <script type="module" crossorigin src="/week6/assets/main-6bd301eb.js"></script>
-    <link rel="stylesheet" href="/week6/assets/main-aef87cc2.css">
+    <script type="module" crossorigin src="/week6/assets/main-dd90aa41.js"></script>
+    <link rel="stylesheet" href="/week6/assets/main-31b891a0.css">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg">
@@ -53,10 +54,15 @@
           <source media="(min-width: 992px)" srcset="/week6/assets/banner-ff141a3d.png ">
           <img src="/week6/assets/banner-sm-1a33f8cf.png" alt="banner-sm" class="w-100">
         </picture>
-        <div class="container-fluid py-5 position-absolute top-50 translate-middle-y text-white">
-          <h3 class="fs-lg-5 fs-6">獻給新世代的生活風格誌</h3>
-          <h2 class="col-md-8 fs-lg-1 fs-3">一起探索生活的無限可能</h2>
-          <button class="btn btn-secondary-200 fs-lg-5 text-white" type="button">馬上訂閱</button>
+        <div class="container-fluid py-5 position-absolute top-50 translate-middle-y text-white ps-9">
+          <h3 class="fs-lg-5 fs-6 mb-2">獻給新世代的生活風格誌</h3>
+          <h2 class="col-md-8 fs-lg-1 fs-3 mb-5">一起探索生活的無限可能</h2>
+          <button class="btn btn-secondary-200 fs-lg-5 text-white" type="button">
+            馬上訂閱
+            <span class="material-symbols-outlined ms-1 align-text-bottom">
+              east
+              </span>
+          </button>
         </div>
       </div>
     </section>
@@ -73,92 +79,103 @@
           </div>
              </div>
              <div class="col">
+              <div class="theme-card">
             <picture>
               <source media="(min-width: 992px)" srcset="/week6/assets/theme-3-6a361920.png ">
               <img src="/week6/assets/theme-3-sm-03d78e75.png" alt="hots-3" class="w-100">
             </picture>
           </div>
+          </div>
           <div class="col">
+            <div class="theme-card">
             <picture>
               <source media="(min-width: 992px)" srcset="/week6/assets/theme-5-b39e8856.png ">
               <img src="/week6/assets/theme-5-sm-65d802c3.png" alt="hots-5" class="w-100">
             </picture>
           </div>
+          </div>
           <div class="col">
+            <div class="theme-card">
             <picture>
               <source media="(min-width: 992px)" srcset="/week6/assets/theme-8-ce962716.png ">
               <img src="/week6/assets/theme-8-sm-402e892b.png" alt="hots-8" class="w-100">
             </picture>
           </div>
+          </div>
           <div class="col">
+            <div class="theme-card">
             <picture>
               <source media="(min-width: 992px)" srcset="/week6/assets/theme-2-f68e2e55.png ">
               <img src="/week6/assets/theme-2-sm-2123bacc.png" alt="hots-2" class="w-100">
             </picture>
           </div>
+          </div>
           <div class="col">
+            <div class="theme-card">
             <picture>
               <source media="(min-width: 992px)" srcset="/week6/assets/theme-4-3688ebf7.png ">
               <img src="/week6/assets/theme-4-sm-0dfc8cb3.png" alt="hots-4" class="w-100">
             </picture>
           </div>
+          </div>
           <div class="col">
+            <div class="theme-card">
             <picture>
               <source media="(min-width: 992px)" srcset="/week6/assets/theme-6-82f2b629.png ">
               <img src="/week6/assets/theme-6-sm-fed41742.png" alt="hots-6" class="w-100">
             </picture>
           </div>
+          </div>
           <div class="col">
+            <div class="theme-card">
             <picture>
               <source media="(min-width: 992px)" srcset="/week6/assets/theme-7-88f0cd69.png ">
               <img src="/week6/assets/theme-7-sm-0e3e7b41.png" alt="hots-7" class="w-100">
             </picture>
           </div>
+          </div>
         </div>
       </section>
-    </main>
 
-    <h1 class="index-title">我是首頁</h1>
-
-    <div class="card" style="width: 18rem">
-      <img src="/week6/assets/cat-0c0689ae.jpg" class="card-img-top" alt="cat" />
-      <div class="card-body">
-        <h5 class="card-title">卡片元件</h5>
-        <p class="card-text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, odit, iusto odio assumenda alias id
-          nobis earum!
-        </p>
-      </div>
-    </div>
-
-    <!-- Modal 按鈕 -->
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-      打開 modal
-    </button>
-
-    <!-- Modal 元件 -->
-    <div
-      class="modal fade"
-      id="exampleModal"
-      tabindex="-1"
-      aria-labelledby="exampleModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Modal 標題</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">內容</div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">關閉</button>
-            <button type="button" class="btn btn-primary">確定</button>
+      <section class="bg-primary-200">
+        <div class="container position-relative py-lg-10">
+          <div class="hito-content">
+            <h3>\ 母親節強檔活動 /</h3>
+          <h2>家庭訂閱方案限時 7 折</h2>
+          <ul>
+            <li class="list-unstyled">每月最新文章無限閱讀</li>
+          </ul>
           </div>
         </div>
-      </div>
-    </div>
+      </section>
 
+      <section class="container py-10">
+        <div class="row">
+          <div class="col-lg-6">
+            <h2>Vivre 給你意想不到的生活風格提案</h2>
+          </div>
+          <div class="col-lg-6">
+            <ul class="row">
+              <li class="col-lg-6 list-unstyled mt-lg-7">
+                <img src="/week6/assets/projects-1-1192f106.png" alt="">
+              </li>
+              <li class="col-lg-6 list-unstyled">
+                <img src="/week6/assets/projects-1-1192f106.png" alt="">
+              </li>
+              <li class="col-lg-6 list-unstyled mt-lg-7">
+                <img src="/week6/assets/projects-1-1192f106.png" alt="">
+              </li>
+              <li class="col-lg-6 list-unstyled">
+                <img src="/week6/assets/projects-1-1192f106.png" alt="">
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
+    </main>
+
+    
     <footer class="footer">我是 footer</footer>
     
   </body>
