--- a/pages/index.html
+++ b/pages/index.html
@@ -11,7 +11,7 @@
     <%- include('./layout/header'); -%>
 
     <main>
-      <section class="container">
+      <section class="container my-10 gx-0">
       <div class="mb-4 rounded-3 position-relative">
         <picture>
           <source media="(min-width: 992px)" srcset="../assets/images/banner.png">
@@ -31,7 +31,7 @@
     </section>
 
       <section class="container py-lg-10 py-8">
-        <h2>熱門主題</h2>
+        <h2 class="mb-5">熱門主題</h2>
         <div class="row row-cols-lg-4 row-cols-md-2 row-cols-1 gy-5">
           <div class="col">
             <div class="theme-card">
@@ -39,6 +39,7 @@
               <source media="(min-width: 992px)" srcset="../assets/images/theme-1.png">
               <img src="/assets/images/theme-1-sm.png" alt="hots-1" class="w-100">
             </picture>
+            <h5 class="position-absolute top-50 start-50 translate-middle text-white align-middle fs-6">城市漫遊者</h5>
           </div>
              </div>
              <div class="col">
@@ -47,6 +48,7 @@
               <source media="(min-width: 992px)" srcset="../assets/images/theme-3.png">
               <img src="/assets/images/theme-3-sm.png" alt="hots-3" class="w-100">
             </picture>
+            <h5 class="position-absolute top-50 start-50 translate-middle text-white align-middle fs-6">秘境尋蹤人</h5>
           </div>
           </div>
           <div class="col">
@@ -55,6 +57,7 @@
               <source media="(min-width: 992px)" srcset="../assets/images/theme-5.png">
               <img src="/assets/images/theme-5-sm.png" alt="hots-5" class="w-100">
             </picture>
+            <h5 class="position-absolute top-50 start-50 translate-middle text-white align-middle fs-6">品味設計家</h5>
           </div>
           </div>
           <div class="col">
@@ -63,6 +66,7 @@
               <source media="(min-width: 992px)" srcset="../assets/images/theme-8.png">
               <img src="/assets/images/theme-8-sm.png" alt="hots-8" class="w-100">
             </picture>
+            <h5 class="position-absolute top-50 start-50 translate-middle text-white align-middle fs-6">美食探險記</h5>
           </div>
           </div>
           <div class="col">
@@ -71,6 +75,7 @@
               <source media="(min-width: 992px)" srcset="../assets/images/theme-2.png">
               <img src="/assets/images/theme-2-sm.png" alt="hots-2" class="w-100">
             </picture>
+            <h5 class="position-absolute top-50 start-50 translate-middle text-white align-middle fs-6">美學建築誌</h5>
           </div>
           </div>
           <div class="col">
@@ -79,6 +84,7 @@
               <source media="(min-width: 992px)" srcset="../assets/images/theme-4.png">
               <img src="/assets/images/theme-4-sm.png" alt="hots-4" class="w-100">
             </picture>
+            <h5 class="position-absolute top-50 start-50 translate-middle text-white align-middle fs-6">慢活生活行</h5>
           </div>
           </div>
           <div class="col">
@@ -87,6 +93,7 @@
               <source media="(min-width: 992px)" srcset="../assets/images/theme-6.png">
               <img src="/assets/images/theme-6-sm.png" alt="hots-6" class="w-100">
             </picture>
+            <h5 class="position-absolute top-50 start-50 translate-middle text-white align-middle fs-6">工藝匠心賞</h5>
           </div>
           </div>
           <div class="col">
@@ -95,6 +102,7 @@
               <source media="(min-width: 992px)" srcset="../assets/images/theme-7.png">
               <img src="/assets/images/theme-7-sm.png" alt="hots-7" class="w-100">
             </picture>
+            <h5 class="position-absolute top-50 start-50 translate-middle text-white align-middle fs-6">時尚先鋒派</h5>
           </div>
           </div>
         </div>
