--- a/about.html
+++ b/about.html
@@ -5,41 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>about</title>
-    <script type="module" crossorigin src="/week6/assets/main-dd90aa41.js"></script>
-    <link rel="stylesheet" href="/week6/assets/main-31b891a0.css">
+    <script type="module" crossorigin src="/week6/assets/main-bb42c4c1.js"></script>
+    <link rel="stylesheet" href="/week6/assets/main-b0dac10b.css">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg">
-    <div class="container">
-      <a class="navbar-brand" href="#">Navbar</a>
+    <div class="container mt-8 nav-border">
+      <a class="navbar-brand" href="index.html">
+        <img src="/week6/assets/vivre-logo-2a0dd0d5.svg" alt="vivre-logo">
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <form class="d-flex me-auto" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
+            <input class="form-control me-2 rounded-pill py-2 px-4" type="search" placeholder="搜尋文章" aria-label="search">
+            <button class="btn nav-btn" type="submit">
+              <span class="material-symbols-outlined">search</span>
+            </button>
           </form>
-        <ul class="navbar-nav mb-2 mb-lg-0">
+        <ul class="navbar-nav mb-2 mb-lg-0 ms-auto align-items-lg-center">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link me-5" aria-current="page" href="#">所有文章</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
+            <a class="nav-link me-5" href="#">訂閱方案</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+            <a class="nav-link me-5" href="#">關於我們</a>
+          </li>
+          <li class="nav-item">
+            <button class="btn btn-secondary-200 fs-lg-7 text-white" type="button">
+              登入 / 註冊
+            </button>
           </li>
         </ul>
         
