--- a/index.html
+++ b/index.html
@@ -6,41 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>index</title>
-    <script type="module" crossorigin src="/week6/assets/main-dd90aa41.js"></script>
-    <link rel="stylesheet" href="/week6/assets/main-31b891a0.css">
+    <script type="module" crossorigin src="/week6/assets/main-bb42c4c1.js"></script>
+    <link rel="stylesheet" href="/week6/assets/main-b0dac10b.css">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg">
-    <div class="container">
-      <a class="navbar-brand" href="#">Navbar</a>
+    <div class="container mt-8 nav-border">
+      <a class="navbar-brand" href="index.html">
+        <img src="/week6/assets/vivre-logo-2a0dd0d5.svg" alt="vivre-logo">
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <form class="d-flex me-auto" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
+            <input class="form-control me-2 rounded-pill py-2 px-4" type="search" placeholder="搜尋文章" aria-label="search">
+            <button class="btn nav-btn" type="submit">
+              <span class="material-symbols-outlined">search</span>
+            </button>
           </form>
-        <ul class="navbar-nav mb-2 mb-lg-0">
+        <ul class="navbar-nav mb-2 mb-lg-0 ms-auto align-items-lg-center">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link me-5" aria-current="page" href="#">所有文章</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
+            <a class="nav-link me-5" href="#">訂閱方案</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+            <a class="nav-link me-5" href="#">關於我們</a>
+          </li>
+          <li class="nav-item">
+            <button class="btn btn-secondary-200 fs-lg-7 text-white" type="button">
+              登入 / 註冊
+            </button>
           </li>
         </ul>
         
@@ -48,7 +46,7 @@
     </div>
   </nav>
     <main>
-      <section class="container">
+      <section class="container my-10 gx-0">
       <div class="mb-4 rounded-3 position-relative">
         <picture>
           <source media="(min-width: 992px)" srcset="/week6/assets/banner-ff141a3d.png ">
@@ -68,7 +66,7 @@
     </section>
 
       <section class="container py-lg-10 py-8">
-        <h2>熱門主題</h2>
+        <h2 class="mb-5">熱門主題</h2>
         <div class="row row-cols-lg-4 row-cols-md-2 row-cols-1 gy-5">
           <div class="col">
             <div class="theme-card">
@@ -76,6 +74,7 @@
               <source media="(min-width: 992px)" srcset="/week6/assets/theme-1-c3f2428d.png ">
               <img src="/week6/assets/theme-1-sm-e28ce55e.png" alt="hots-1" class="w-100">
             </picture>
+            <h5 class="position-absolute top-50 start-50 translate-middle text-white align-middle fs-6">城市漫遊者</h5>
           </div>
              </div>
              <div class="col">
@@ -84,6 +83,7 @@
               <source media="(min-width: 992px)" srcset="/week6/assets/theme-3-6a361920.png ">
               <img src="/week6/assets/theme-3-sm-03d78e75.png" alt="hots-3" class="w-100">
             </picture>
+            <h5 class="position-absolute top-50 start-50 translate-middle text-white align-middle fs-6">秘境尋蹤人</h5>
           </div>
           </div>
           <div class="col">
@@ -92,6 +92,7 @@
               <source media="(min-width: 992px)" srcset="/week6/assets/theme-5-b39e8856.png ">
               <img src="/week6/assets/theme-5-sm-65d802c3.png" alt="hots-5" class="w-100">
             </picture>
+            <h5 class="position-absolute top-50 start-50 translate-middle text-white align-middle fs-6">品味設計家</h5>
           </div>
           </div>
           <div class="col">
@@ -100,6 +101,7 @@
               <source media="(min-width: 992px)" srcset="/week6/assets/theme-8-ce962716.png ">
               <img src="/week6/assets/theme-8-sm-402e892b.png" alt="hots-8" class="w-100">
             </picture>
+            <h5 class="position-absolute top-50 start-50 translate-middle text-white align-middle fs-6">美食探險記</h5>
           </div>
           </div>
           <div class="col">
@@ -108,6 +110,7 @@
               <source media="(min-width: 992px)" srcset="/week6/assets/theme-2-f68e2e55.png ">
               <img src="/week6/assets/theme-2-sm-2123bacc.png" alt="hots-2" class="w-100">
             </picture>
+            <h5 class="position-absolute top-50 start-50 translate-middle text-white align-middle fs-6">美學建築誌</h5>
           </div>
           </div>
           <div class="col">
@@ -116,6 +119,7 @@
               <source media="(min-width: 992px)" srcset="/week6/assets/theme-4-3688ebf7.png ">
               <img src="/week6/assets/theme-4-sm-0dfc8cb3.png" alt="hots-4" class="w-100">
             </picture>
+            <h5 class="position-absolute top-50 start-50 translate-middle text-white align-middle fs-6">慢活生活行</h5>
           </div>
           </div>
           <div class="col">
@@ -124,6 +128,7 @@
               <source media="(min-width: 992px)" srcset="/week6/assets/theme-6-82f2b629.png ">
               <img src="/week6/assets/theme-6-sm-fed41742.png" alt="hots-6" class="w-100">
             </picture>
+            <h5 class="position-absolute top-50 start-50 translate-middle text-white align-middle fs-6">工藝匠心賞</h5>
           </div>
           </div>
           <div class="col">
@@ -132,6 +137,7 @@
               <source media="(min-width: 992px)" srcset="/week6/assets/theme-7-88f0cd69.png ">
               <img src="/week6/assets/theme-7-sm-0e3e7b41.png" alt="hots-7" class="w-100">
             </picture>
+            <h5 class="position-absolute top-50 start-50 translate-middle text-white align-middle fs-6">時尚先鋒派</h5>
           </div>
           </div>
         </div>
