--- a/pages/index.html
+++ b/pages/index.html
@@ -11,7 +11,7 @@
     <%- include('./layout/header'); -%>
 
     <main>
-      <section class="container my-10 gx-0">
+      <section class="container container-md my-lg-10 my-sm-8 gx-lg-0">
       <div class="mb-4 rounded-3 position-relative">
         <picture>
           <source media="(min-width: 992px)" srcset="../assets/images/banner.png">
@@ -30,7 +30,7 @@
       </div>
     </section>
 
-      <section class="container py-lg-10 py-8">
+      <section class="container py-lg-10 py-sm-6">
         <h2 class="mb-5">熱門主題</h2>
         <div class="row row-cols-lg-4 row-cols-md-2 row-cols-1 gy-5">
           <div class="col">
@@ -108,14 +108,38 @@
         </div>
       </section>
 
+      <section>
+        
+      </section>
+
       <section class="bg-primary-200">
         <div class="container position-relative py-lg-10">
-          <div class="hito-content">
-            <h3>\ 母親節強檔活動 /</h3>
-          <h2>家庭訂閱方案限時 7 折</h2>
+          <div class="hito-content d-flex flex-column align-items-center">
+            <h3 class="fs-lg-4 fs-6 mb-4 ">\ 母親節強檔活動 /</h3>
+          <h2 class="fs-lg-2 mb-4">家庭訂閱方案限時 7 折</h2>
           <ul>
-            <li class="list-unstyled">每月最新文章無限閱讀</li>
+            <li class="list-unstyled fs-6 text-primary-400 mb-3">
+              <i class="bi bi-check"></i>
+              每月最新文章無限閱讀</li>
+            <li class="list-unstyled fs-6 text-primary-400 mb-3">
+              <i class="bi bi-check"></i>
+              專屬會員限定內容</li>
+            <li class="list-unstyled fs-6 text-primary-400 mb-3">
+              <i class="bi bi-check"></i>
+              定期電子報</li>
+            <li class="list-unstyled fs-6 text-primary-400 mb-3">
+              <i class="bi bi-check"></i>
+              年度精選禮物</li>
+            <li class="list-unstyled fs-6 text-primary-400 mb-3">
+              <i class="bi bi-check"></i>
+              24 /7 優先客戶服務</li>
+            <li class="list-unstyled fs-6 text-primary-400 mb-3">
+              <i class="bi bi-check"></i>
+              為每個成員量身打造專屬行程</li>
           </ul>
+          <button class="btn btn-secondary-200 fs-lg-5 text-white" type="button">
+            我想了解
+          </button>
           </div>
         </div>
       </section>
