--- a/index.html
+++ b/index.html
@@ -6,37 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>index</title>
-    <script type="module" crossorigin src="/week6/assets/main-bb42c4c1.js"></script>
-    <link rel="stylesheet" href="/week6/assets/main-b0dac10b.css">
+    <script type="module" crossorigin src="/week6/assets/main-fc2f6af6.js"></script>
+    <link rel="stylesheet" href="/week6/assets/main-d27da702.css">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg">
-    <div class="container mt-8 nav-border">
-      <a class="navbar-brand" href="index.html">
+    <div class="container mt-8 nav-border align-items-cente">
+      <a class="navbar-brand " href="index.html">
         <img src="/week6/assets/vivre-logo-2a0dd0d5.svg" alt="vivre-logo">
       </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <form class="d-flex me-auto" role="search">
-            <input class="form-control me-2 rounded-pill py-2 px-4" type="search" placeholder="搜尋文章" aria-label="search">
-            <button class="btn nav-btn" type="submit">
+      <div class="collapse navbar-collapse mt-4 align-items-sm-center" id="navbarSupportedContent">
+        <div class="d-flex mb-sm-6 mb-lg-0">
+            <input class="form-control me-2 rounded-pill py-2 px-4 pe-lg-5" type="search" placeholder="搜尋文章" aria-label="search">
+            <button class="btn nav-btn border-0" type="submit">
               <span class="material-symbols-outlined">search</span>
             </button>
-          </form>
+        </div>
         <ul class="navbar-nav mb-2 mb-lg-0 ms-auto align-items-lg-center">
-          <li class="nav-item">
-            <a class="nav-link me-5" aria-current="page" href="#">所有文章</a>
+          <li class="nav-item ps-sm-3">
+            <a class="nav-link p-lg-3 pb-sm-6" aria-current="page" href="#">所有文章</a>
+          </li>
+          <li class="nav-item ps-sm-3">
+            <a class="nav-link p-lg-3 pb-sm-6" href="#">訂閱方案</a>
+          </li>
+          <li class="nav-item ps-sm-3">
+            <a class="nav-link p-lg-3 pb-sm-6" href="#">關於我們</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link me-5" href="#">訂閱方案</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link me-5" href="#">關於我們</a>
-          </li>
-          <li class="nav-item">
-            <button class="btn btn-secondary-200 fs-lg-7 text-white" type="button">
+            <button class="btn btn-secondary-200 fs-lg-7 text-white w-100" type="button">
               登入 / 註冊
             </button>
           </li>
@@ -46,7 +46,7 @@
     </div>
   </nav>
     <main>
-      <section class="container my-10 gx-0">
+      <section class="container container-md my-lg-10 my-sm-8 gx-lg-0">
       <div class="mb-4 rounded-3 position-relative">
         <picture>
           <source media="(min-width: 992px)" srcset="/week6/assets/banner-ff141a3d.png ">
@@ -65,7 +65,7 @@
       </div>
     </section>
 
-      <section class="container py-lg-10 py-8">
+      <section class="container py-lg-10 py-sm-6">
         <h2 class="mb-5">熱門主題</h2>
         <div class="row row-cols-lg-4 row-cols-md-2 row-cols-1 gy-5">
           <div class="col">
@@ -143,14 +143,38 @@
         </div>
       </section>
 
+      <section>
+        
+      </section>
+
       <section class="bg-primary-200">
         <div class="container position-relative py-lg-10">
-          <div class="hito-content">
-            <h3>\ 母親節強檔活動 /</h3>
-          <h2>家庭訂閱方案限時 7 折</h2>
+          <div class="hito-content d-flex flex-column align-items-center">
+            <h3 class="fs-lg-4 fs-6 mb-4 ">\ 母親節強檔活動 /</h3>
+          <h2 class="fs-lg-2 mb-4">家庭訂閱方案限時 7 折</h2>
           <ul>
-            <li class="list-unstyled">每月最新文章無限閱讀</li>
+            <li class="list-unstyled fs-6 text-primary-400 mb-3">
+              <i class="bi bi-check"></i>
+              每月最新文章無限閱讀</li>
+            <li class="list-unstyled fs-6 text-primary-400 mb-3">
+              <i class="bi bi-check"></i>
+              專屬會員限定內容</li>
+            <li class="list-unstyled fs-6 text-primary-400 mb-3">
+              <i class="bi bi-check"></i>
+              定期電子報</li>
+            <li class="list-unstyled fs-6 text-primary-400 mb-3">
+              <i class="bi bi-check"></i>
+              年度精選禮物</li>
+            <li class="list-unstyled fs-6 text-primary-400 mb-3">
+              <i class="bi bi-check"></i>
+              24 /7 優先客戶服務</li>
+            <li class="list-unstyled fs-6 text-primary-400 mb-3">
+              <i class="bi bi-check"></i>
+              為每個成員量身打造專屬行程</li>
           </ul>
+          <button class="btn btn-secondary-200 fs-lg-5 text-white" type="button">
+            我想了解
+          </button>
           </div>
         </div>
       </section>
