--- a/pages/index.html
+++ b/pages/index.html
@@ -98,7 +98,7 @@
           </div>
           </div>
           <div class="col">
-            <div class="theme-card pb-sm-8">
+            <div class="theme-card">
             <picture>
               <source media="(min-width: 992px)" srcset="../assets/images/theme-7.png">
               <img src="/assets/images/theme-7-sm.png" alt="hots-7" class="w-100">
@@ -444,32 +444,134 @@
             </div>
           </div>
 
+          <div class="row">
+            <div class="col-lg-4">
+            <div class="card border-0">
+            <h2 class="card-title fs-lg-1 text-primary-400 mb-lg-6">食.</h2>
+            <img src="/assets/images/life-1.png" class="card-img-top mb-lg-6" alt="...">
+              <div class="card-body px-0">
+                <p class="card-text mb-lg-4">｜米其林三星主廚的那些絕活傳奇</p>
+                <p class="card-text mb-lg-4">｜探秘成都的地道川味秘技與魅力</p>
+                <p class="card-text mb-lg-6">｜義大利釀酒師對於酒的堅持執著</p>
+                <div class="d-flex justify-content-center">
+                 <a href="#" class="stretched-link text-secondary-200">View More
+                 <i class="bi bi-arrow-right ps-2"></i>
+                 </a>
+                </div>
+              </div>
+            </div>
+            </div>
+
+            <div class="col-lg-4">
+            <div class="card border-0">
+            <h2 class="card-title fs-lg-1 text-primary-400 mb-lg-6">藝.</h2>
+            <img src="/assets/images/life-2.png" class="card-img-top mb-lg-6" alt="...">
+              <div class="card-body px-0"> 
+                <p class="card-text mb-lg-4">｜解構教主級時裝設計大師的獨特美學</p>
+                <p class="card-text mb-lg-4">｜當代攝影師鏡頭中的光影離奇</p>
+                <p class="card-text mb-lg-4">｜帶你穿縮中世紀，夏季文藝復興展</p>
+                <div class="d-flex justify-content-center">
+                 <a href="#" class="stretched-link text-secondary-200">View More
+                 <i class="bi bi-arrow-right ps-2"></i>
+                 </a>
+                </div>
+              </div>
+            </div>
+            </div>
+
+            <div class="col-lg-4">
+            <div class="card border-0">
+            <h2 class="card-title fs-lg-1 text-primary-400 mb-lg-6">旅.</h2>
+            <img src="/assets/images/life-3.png" class="card-img-top mb-lg-6" alt="...">
+              <div class="card-body px-0">
+                <p class="card-text mb-lg-4">｜遠離喧囂,偶探巴塔哥尼亞終界</p>
+                <p class="card-text mb-lg-4">｜東京深度六區,帶你細品極簡魅力</p>
+                <p class="card-text mb-lg-4">｜專賣奇珍異寶的東歐地下夜市</p>
+                <div class="d-flex justify-content-center">
+                 <a href="#" class="stretched-link text-secondary-200">View More
+                 <i class="bi bi-arrow-right ps-2"></i>
+                 </a>
+                </div>
+              </div>
+            </div>
+            </div>
+          </div>
         </div>
       </section>
 
 
-      <section class="container py-10">
+      <section class="bg-primary-200">
+       <div class="container py-10">
         <div class="row">
-          <div class="col-lg-6">
-            <h2>Vivre 給你意想不到的生活風格提案</h2>
+          <div class="col-lg-6 d-lg-flex flex-column align-items-start justify-content-center">
+            <h5 class="text-gray-400 mb-lg-3">今天又不知道要去哪裡了嗎？</h5>
+            <h2 class="text-gray-500 mb-lg-6">Vivre 給你意想不到的生活風格提案</h2>
+            <button class="btn btn-secondary-200 fs-lg-5 text-white" type="button">
+            馬上訂閱
+            <span class="material-symbols-outlined ms-1 align-text-bottom">
+              east
+              </span>
+          </button>
           </div>
-          <div class="col-lg-6">
-            <ul class="row">
+          <div class="col-lg-6 col-md-8 mx-auto">
+            <ul class="row d-none d-lg-flex">
               <li class="col-lg-6 list-unstyled mt-lg-7">
-                <img src="/assets/images/projects-1.png" alt="">
+                <div class="position-relative">
+                  <p class="position-absolute d-flex align-items-center top-0 start-0 ms-3 
+                            translate-middle text-secondary-300 bg-white ms-2 
+                            translate-middle-y fs-5 py-1 px-2 rounded border border-secondary-100 fw-bold">
+                    <i class="bi bi-caret-right-fill me-1 fs-6 align-top"></i>
+                    人氣行程
+                    <div class="position-absolute d-flex justify-content-between bottom-0 start-0 end-0 ps-2 pb-3 text-white">
+                    <p>親子露營要帶什麼？</p>
+                    <i class="bi bi-arrow-right pe-2"></i>
+                    </div>
+                  </p>
+                  <a href="#" class="stretched-link">
+                <img src="/assets/images/projects-2.png" alt=""></a>
+              </div>
               </li>
+
               <li class="col-lg-6 list-unstyled">
+              <div class="position-relative">
+                <p class="position-absolute d-flex align-items-center top-0 start-0 ms-3 translate-middle 
+                          text-secondary-300 bg-white ms-2 translate-middle-y fs-5 py-1 px-2 
+                          rounded border border-secondary-100 fw-bold">
+                  <i class="bi bi-caret-right-fill me-1 fs-6 align-top"></i>
+                  編輯推薦
+                </p>
                 <img src="/assets/images/projects-1.png" alt="">
+              </div>
               </li>
+
               <li class="col-lg-6 list-unstyled mt-lg-7">
-                <img src="/assets/images/projects-1.png" alt="">
+                <div class="position-relative">
+                  <p class="position-absolute d-flex align-items-center top-0 start-0 ms-3 translate-middle 
+                            text-secondary-300 bg-white ms-2 translate-middle-y fs-5 py-1 px-2 
+                            rounded border border-secondary-100 fw-bold">
+                    <i class="bi bi-caret-right-fill me-1 fs-6 align-top"></i>
+                    編輯推薦
+                  </p>
+                  <img src="/assets/images/projects-4.png" alt="">
+                </div>
               </li>
+
               <li class="col-lg-6 list-unstyled">
-                <img src="/assets/images/projects-1.png" alt="">
+              <div class="position-relative">
+                <p class="position-absolute d-flex align-items-center top-0 start-0 ms-3 translate-middle 
+                            text-secondary-300 bg-white ms-2 translate-middle-y fs-5 py-1 px-2 
+                            rounded border border-secondary-100 fw-bold">
+                    <i class="bi bi-caret-right-fill me-1 fs-6 align-top"></i>
+                    熱門文章
+                  </p>
+                <img src="/assets/images/projects-3.png" alt="">
+              </div>
               </li>
             </ul>
           </div>
         </div>
+
+      </div>
       </section>
 
     </main>
