--- a/pages/index.html
+++ b/pages/index.html
@@ -522,7 +522,8 @@
                             translate-middle-y fs-5 py-1 px-2 rounded border border-secondary-100 fw-bold">
                     <i class="bi bi-caret-right-fill me-1 fs-6 align-top"></i>
                     人氣行程
-                    <div class="position-absolute d-flex justify-content-between bottom-0 start-0 end-0 ps-2 pb-3 text-white">
+                    <div class="position-absolute d-flex justify-content-between bottom-0 start-0 end-0 ps-2 pb-3 text-white
+                    projects">
                     <p>親子露營要帶什麼？</p>
                     <i class="bi bi-arrow-right pe-2"></i>
                     </div>
@@ -539,8 +540,13 @@
                           rounded border border-secondary-100 fw-bold">
                   <i class="bi bi-caret-right-fill me-1 fs-6 align-top"></i>
                   編輯推薦
+                  <div class="position-absolute d-flex justify-content-between bottom-0 start-0 end-0 ps-2 pb-3 text-white">
+                    <p>山女孩的健行筆記</p>
+                    <i class="bi bi-arrow-right pe-2"></i>
+                  </div>
                 </p>
-                <img src="/assets/images/projects-1.png" alt="">
+                <a href="#" class="stretched-link">
+                <img src="/assets/images/projects-1.png" alt=""></a>
               </div>
               </li>
 
@@ -551,8 +557,13 @@
                             rounded border border-secondary-100 fw-bold">
                     <i class="bi bi-caret-right-fill me-1 fs-6 align-top"></i>
                     編輯推薦
+                    <div class="position-absolute d-flex justify-content-between bottom-0 start-0 end-0 ps-2 pb-3 text-white">
+                      <p>質感房間改造攻略！</p>
+                      <i class="bi bi-arrow-right pe-2"></i>
+                    </div>
                   </p>
-                  <img src="/assets/images/projects-4.png" alt="">
+                  <a href="#" class="stretched-link">
+                  <img src="/assets/images/theme-4.png" alt=""></a>
                 </div>
               </li>
 
@@ -563,17 +574,32 @@
                             rounded border border-secondary-100 fw-bold">
                     <i class="bi bi-caret-right-fill me-1 fs-6 align-top"></i>
                     熱門文章
+                    <div class="position-absolute d-flex justify-content-between bottom-0 start-0 end-0 ps-2 pb-3 text-white">
+                      <p>適合溜小孩的海邊景點推薦</p>
+                      <i class="bi bi-arrow-right pe-2"></i>
+                    </div>
                   </p>
-                <img src="/assets/images/projects-3.png" alt="">
+                  <a href="#" class="stretched-link">
+                <img src="/assets/images/projects-3.png" alt=""></a>
               </div>
               </li>
             </ul>
           </div>
         </div>
-
       </div>
       </section>
 
+      <section class="container">
+        <div class="d-flex justify-content-between my-lg-10">
+          <h2 class="text-gray-500">想看什麼主題由你決定！</h2>
+          <div class="d-flex flex-column align-items-end">
+            <h5 class="text-gray-500 mb-3">想看什麼主題由你決定！</h5>
+            <button class="btn btn-secondary-200 fs-lg-5 text-white" type="button">
+            馬上訂閱
+          </button>
+          </div>
+        </div>
+      </section>
     </main>
 
     
