--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>contact</title>
-    <script type="module" crossorigin src="/week6/assets/main-59f5e725.js"></script>
-    <link rel="stylesheet" href="/week6/assets/main-6eb58049.css">
+    <script type="module" crossorigin src="/week6/assets/main-8f1ba859.js"></script>
+    <link rel="stylesheet" href="/week6/assets/main-285185ec.css">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg">
@@ -44,7 +44,10 @@
       </div>
     </div>
   </nav>    <h1>我是contact</h1>
-    <footer class="footer">我是 footer</footer>
+    <footer class="container mb-lg-5">
+    <div class="border-top"></div>
+    <p class="text-center text-gray-400 mt-lg-5">©Vivre 2024 All right Reserved</p>
+</footer>
     
   </body>
 </html>
