--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <title>index</title>
-    <script type="module" crossorigin src="/week6/assets/main-59f5e725.js"></script>
-    <link rel="stylesheet" href="/week6/assets/main-6eb58049.css">
+    <script type="module" crossorigin src="/week6/assets/main-8f1ba859.js"></script>
+    <link rel="stylesheet" href="/week6/assets/main-285185ec.css">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg">
@@ -557,7 +557,8 @@
                             translate-middle-y fs-5 py-1 px-2 rounded border border-secondary-100 fw-bold">
                     <i class="bi bi-caret-right-fill me-1 fs-6 align-top"></i>
                     人氣行程
-                    <div class="position-absolute d-flex justify-content-between bottom-0 start-0 end-0 ps-2 pb-3 text-white">
+                    <div class="position-absolute d-flex justify-content-between bottom-0 start-0 end-0 ps-2 pb-3 text-white
+                    projects">
                     <p>親子露營要帶什麼？</p>
                     <i class="bi bi-arrow-right pe-2"></i>
                     </div>
@@ -574,8 +575,13 @@
                           rounded border border-secondary-100 fw-bold">
                   <i class="bi bi-caret-right-fill me-1 fs-6 align-top"></i>
                   編輯推薦
+                  <div class="position-absolute d-flex justify-content-between bottom-0 start-0 end-0 ps-2 pb-3 text-white">
+                    <p>山女孩的健行筆記</p>
+                    <i class="bi bi-arrow-right pe-2"></i>
+                  </div>
                 </p>
-                <img src="/week6/assets/projects-1-1192f106.png" alt="">
+                <a href="#" class="stretched-link">
+                <img src="/week6/assets/projects-1-1192f106.png" alt=""></a>
               </div>
               </li>
 
@@ -586,8 +592,13 @@
                             rounded border border-secondary-100 fw-bold">
                     <i class="bi bi-caret-right-fill me-1 fs-6 align-top"></i>
                     編輯推薦
+                    <div class="position-absolute d-flex justify-content-between bottom-0 start-0 end-0 ps-2 pb-3 text-white">
+                      <p>質感房間改造攻略！</p>
+                      <i class="bi bi-arrow-right pe-2"></i>
+                    </div>
                   </p>
-                  <img src="/week6/assets/projects-4-c31b35a0.png" alt="">
+                  <a href="#" class="stretched-link">
+                  <img src="/week6/assets/theme-4-3688ebf7.png" alt=""></a>
                 </div>
               </li>
 
@@ -598,21 +609,39 @@
                             rounded border border-secondary-100 fw-bold">
                     <i class="bi bi-caret-right-fill me-1 fs-6 align-top"></i>
                     熱門文章
+                    <div class="position-absolute d-flex justify-content-between bottom-0 start-0 end-0 ps-2 pb-3 text-white">
+                      <p>適合溜小孩的海邊景點推薦</p>
+                      <i class="bi bi-arrow-right pe-2"></i>
+                    </div>
                   </p>
-                <img src="/week6/assets/projects-3-6cd4e17c.png" alt="">
+                  <a href="#" class="stretched-link">
+                <img src="/week6/assets/projects-3-6cd4e17c.png" alt=""></a>
               </div>
               </li>
             </ul>
           </div>
         </div>
-
       </div>
       </section>
 
+      <section class="container">
+        <div class="d-flex justify-content-between my-lg-10">
+          <h2 class="text-gray-500">想看什麼主題由你決定！</h2>
+          <div class="d-flex flex-column align-items-end">
+            <h5 class="text-gray-500 mb-3">想看什麼主題由你決定！</h5>
+            <button class="btn btn-secondary-200 fs-lg-5 text-white" type="button">
+            馬上訂閱
+          </button>
+          </div>
+        </div>
+      </section>
     </main>
 
     
-    <footer class="footer">我是 footer</footer>
+    <footer class="container mb-lg-5">
+    <div class="border-top"></div>
+    <p class="text-center text-gray-400 mt-lg-5">©Vivre 2024 All right Reserved</p>
+</footer>
     
   </body>
 </html>
