--- a/about.html
+++ b/about.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="/week6/assets/main-285185ec.css">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg">
-    <div class="container mt-8 nav-border align-items-cente">
-      <a class="navbar-brand " href="index.html">
-        <img src="/week6/assets/vivre-logo-2a0dd0d5.svg" alt="vivre-logo">
+    <nav class="navbar navbar-expand-lg py-0">
+    <div class="container mt-8 nav-border align-items-center">
+      <a class="navbar-brand" href="index.html">
+        <img class="ms-2" src="/week6/assets/vivre-logo-2a0dd0d5.svg" alt="vivre-logo">
       </a>
       <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -44,9 +44,12 @@
       </div>
     </div>
   </nav>    <h1>我是about</h1>
-    <footer class="container mb-lg-5">
+    <footer>
     <div class="border-top"></div>
-    <p class="text-center text-gray-400 mt-lg-5">©Vivre 2024 All right Reserved</p>
+    <div class="container my-lg-5 my-4">
+    <p class="text-center text-gray-400">©Vivre 2024 All right Reserved</p>
+    </div>
+    
 </footer>
     
   </body>
