--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
       <section class="container">
         <div class="row">
-          <div class="col-md-4 d-none d-lg-block d-xl-none">
+          <div class="col-md-4 d-none d-xxl-block d-lg-block d-xl-none">
             <div class="d-flex flex-column justify-content-between h-100 py-lg-10 py-sm-6">
               <h2 class="mb-auto">精選文章</h2>
               <div class="mt-auto">
