--- a/pages/index.html
+++ b/pages/index.html
@@ -111,7 +111,7 @@
 
       <section class="container">
         <div class="row">
-          <div class="col-md-4 d-none d-lg-block d-xl-none">
+          <div class="col-md-4 d-none d-xxl-block d-xl-block d-lg-block d-xl-none">
             <div class="d-flex flex-column justify-content-between h-100 py-lg-10 py-sm-6">
               <h2 class="mb-auto">精選文章</h2>
               <div class="mt-auto">
@@ -133,7 +133,7 @@
             </div>
           </div>
 
-          <div class="col-md-8 d-none d-lg-block d-xl-none">
+          <div class="col-md-8 d-none d-xxl-block d-xl-block d-lg-block d-xl-none">
             <div class="py-lg-10 py-md-6 d-flex justify-content-end">
               <div class="card border-0 border-bottom rounded-0 rounded-top me-lg-8 me-md-4">
                 <picture>
@@ -177,7 +177,7 @@
 
       <!--精選文章sm-->
       <section class="container">
-        <div class="row d-lg-none d-xl-block">
+        <div class="row d-xl-none d-lg-none d-xl-block">
           <h2 class="mb-5 mt-8">精選文章</h2>
           <div>
             <div class="card border-0 border-bottom rounded-0 rounded-top mb-8">
@@ -247,11 +247,11 @@
 
       <section class="bg-primary-100">
       <div class="container">
-        <div class="pt-lg-10 mb-7 mt-sm-8 mb-sm-5">
+        <div class="pt-lg-10 mb-lg-7 mt-8 mb-5">
           <h2>大家都在看</h2>
         </div>
         <div class="row">
-          <div class="col-lg-3 d-flex d-none d-lg-block d-xl-none">
+          <div class="col-lg-3 d-flex d-none d-xxl-block d-xl-block d-lg-block d-xl-none">
             <ul class="nav d-flex flex-column me-5 py-lg-5">
               <li class="nav-item">
                 <a class="nav-link active text-gray-500 py-lg-3 ps-lg-3 pe-lg-8" id="list-home-list" data-bs-toggle="list" href="#list-home" 
@@ -438,7 +438,7 @@
       <section class="container">
         <div>
           <div class="d-flex justify-content-between py-lg-10 mt-8 mb-5">
-            <h5 class="fs-lg-2 fs-sm-4">品味生活</h5>
+            <h5 class="fs-lg-2 fs-4">品味生活</h5>
             <div class="d-lg-flex align-items-center d-none d-lg-block d-xl-none">
               <button type="button" class="btn btn-outline-primary-400 con-btn me-4">
                 <i class="bi bi-arrow-left"></i>
@@ -514,7 +514,7 @@
         <div class="row">
           <div class="col-lg-6 d-lg-flex flex-column align-items-start justify-content-center text-center text-lg-start">
             <h5 class="text-gray-400 mb-3">今天又不知道要去哪裡了嗎？</h5>
-            <h2 class="text-gray-500 mb-6">
+            <h2 class="text-gray-500 mb-6 fs-4">
               Vivre 
               <br class="d-lg-none mb-1">
               給你意想不到的生活風格提案</h2>
