--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
       <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse mt-4 align-items-sm-center" id="navbarSupportedContent">
+      <div class="collapse navbar-collapse mt-4 align-items-sm-center mx-sm-2" id="navbarSupportedContent">
         <div class="d-flex mb-sm-6 mb-lg-0">
             <input class="form-control me-2 rounded-pill py-2 px-4 pe-lg-5" type="search" placeholder="搜尋文章" aria-label="search">
             <button class="btn nav-btn border-0" type="submit">
@@ -25,14 +25,14 @@
             </button>
         </div>
         <ul class="navbar-nav mb-2 mb-lg-0 ms-auto align-items-lg-center">
-          <li class="nav-item ps-sm-3">
-            <a class="nav-link p-lg-3 pb-sm-6" aria-current="page" href="#">所有文章</a>
+          <li class="nav-item ps-3">
+            <a class="nav-link p-lg-3 pb-6" aria-current="page" href="#">所有文章</a>
           </li>
-          <li class="nav-item ps-sm-3">
-            <a class="nav-link p-lg-3 pb-sm-6" href="#">訂閱方案</a>
+          <li class="nav-item ps-3">
+            <a class="nav-link p-lg-3 pb-6" href="#">訂閱方案</a>
           </li>
-          <li class="nav-item ps-sm-3">
-            <a class="nav-link p-lg-3 pb-sm-6" href="#">關於我們</a>
+          <li class="nav-item ps-3">
+            <a class="nav-link p-lg-3 pb-6" href="#">關於我們</a>
           </li>
           <li class="nav-item">
             <button class="btn btn-secondary-200 fs-lg-7 text-white w-100" type="button">
