--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@
 
             <!--md-->
           <ul class="d-flex my-8">
-            <li class="list-unstyled mt-7 d-lg-none d-xl-block me-5">
+            <li class="list-unstyled mt-7 d-lg-none d-xl-none me-5">
               <div class="position-relative">
                 <p class="position-absolute d-flex align-items-center top-0 start-0 ms-3 
                           translate-middle text-secondary-300 bg-white ms-2 
@@ -652,7 +652,7 @@
             </div>
             </li>
 
-            <li class="list-unstyled d-lg-none d-xl-block mt-7">
+            <li class="list-unstyled d-lg-none d-xl-none mt-7">
               <div class="position-relative">
                 <p class="position-absolute d-flex align-items-center top-0 start-0 ms-3 translate-middle 
                           text-secondary-300 bg-white ms-2 translate-middle-y fs-5 py-1 px-2 
